# tom_pettys_quantum_ai_alignment_jacket

./: .gitignore  README.md
emb/: AWS.dst  GPU_contour.dst  ISS2.jef  QNTM_Arrows.dst  asteroid.jef  atom.dst  atom.jef  circles.dst  circles.jef  dial_diagram.dst  dna2.jef  dna3v.jef  dnav1.jef  fb.dst  fire_small.dst  lines_fabric.bgcode  pin.stl  pin_layer.bgcode  planet.dst  planet2.dst  qc2.jef  qtrmoon.dst  quantum_copmuter_10k.jef  rba.dst  rba.jef  ring_fabric.bgcode  rocket.dst  rocket.jef  smile.dst  smily.dst  solo_planet.dst  sputnik.dst  star1.dst  star2.dst  star3.dst  stars.dst
live/: audio_controller.py  ble_rec.py  generator_service.py  index.html  main.py  pyproject.toml
live/repeng/: extract.py
live/vec/: TPPAST.gguf  TPPRESENT.gguf  drunk.gguf  english_chinese.gguf  fish.gguf  happy.gguf  human.gguf  ice.gguf  low_gravity.gguf  moon.gguf  ram_dass.gguf  sea.gguf  trump.gguf  wind.gguf
xiao_control/: xiao_control.ino
