[project]
name = "display"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "bleak>=2.0.0",
    "fastapi>=0.104.0",
    "gguf>=0.17.1",
    "jinja2>=3.1.0",
    "numpy>=2.2.6",
    "python-osc>=1.9.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn>=0.24.0",
    "websockets>=15.0.1",
    "pydub>=0.25.1",
    "pyaudio>=0.2.14",
]
